# manuai

./: .env.example  .gitignore  Arcops Context.txt  PERFORMANCE.md  README.md  app.py  dashboard.py  fine_tune.py  fixed_fine_tune.py  manuai.code-workspace  model_performance.json  optimize.py  performance_config.json  pyproject.toml
.streamlit/: config.toml
data/: arcops_manufacturing_200.db  ecommerce.sqlite-shm  ecommerce.sqlite-wal  memory.db  sample_queries.json
data/schemas/: database_schema.json
logs/: calibration_history.json  fine_tuning_history.json  model_performance.json
manuai/: agent.py  business_intelligence.py  config.py  database_fine_tuner.py.bak  database_optimizer.py  logging.py  models.py  optimizations.py  performance_config.py  performance_dashboard.py  smart_optimizer.py  tools.py
